# CENTRAL

./: .gitignore  AI_GUIDE.md  CLAUDE.md  Cargo.toml  README.md  aimsoloanalysis_notes.md  central_task_system_tasks.md  dispatch_system_readme.md  dispatch_system_tasks.md  management_improvements.md  pyproject.toml  tasks.md
crates/agentic_loop/: Cargo.toml
crates/agentic_loop/src/: lib.rs
crates/agentic_loop/src/agentic_loop/: budget.rs  mod.rs  state.rs  stream_consumer.rs  tool_dispatch.rs  turn_cycle.rs  types.rs
crates/agentic_loop/src/agentic_loop/tests/: cancellation_tests.rs  channel_priority_tests.rs  compaction_trigger_tests.rs  mod.rs  state_machine_tests.rs  stream_consumer_tests.rs  tool_dispatch_tests.rs  turn_cycle_tests.rs
crates/context_manager/: Cargo.toml
crates/context_manager/src/: lib.rs
crates/context_manager/src/context_manager/: assembly.rs  budget.rs  compaction.rs  config.rs  injection.rs  mod.rs  types.rs
crates/inference/: Cargo.toml
crates/inference/src/: lib.rs
crates/inference/src/inference/: config.rs  cost.rs  mod.rs  model.rs  priority.rs  provider.rs  retry.rs  stream.rs  types.rs
crates/inference/src/inference/anthropic/: mod.rs
crates/inference/src/inference/openai/: mod.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: main.rs
docs/: brief_to_pack.md  capability_memory_hld.md  capability_memory_hld_review.md  capability_memory_lld_01_schema.md  capability_memory_lld_01_schema.review.lld.doc-only.md  capability_memory_lld_01_schema.review.lld.doc-only.v2.md  capability_memory_lld_01_schema.review.lld.md  capability_memory_lld_02_preflight.md  capability_memory_lld_03_worker_contract.md  central_autonomy_integration.md  central_db_durability.md  central_generated_views.md  central_task_cli.md  central_task_concurrency.md  central_task_db_bootstrap.md  central_task_db_schema.md  central_task_system.md  dependency_discipline.md  dispatcher_extraction_plan.md  doc_review_tool.md  hld_worker_guidelines.md  lld_worker_guidelines.md  planner_coordinator_bootstrap.md  planner_status_ui_hld.md  planner_status_ui_hld.review.hld.md  remote_workers_lld.md  repo_health.md  repo_health_adapter_contract.md  repo_health_onboarding.md  repo_health_operator.md  repo_registry_onboarding.md  task_quick.md  voice_ptt.md  voice_ptt_v2.md  voice_ptt_validation_2026-03-15.md  worker_model_policy.md
metrics/: AI_METRICS_GUIDE.md  METRICS_CATALOG.md  query.py  worker_results.py
schemas/: worker_result.schema.json
scripts/: aim_control.py  bootstrap_capabilities.py  brief_to_pack.py  build.sh  central_runtime.py  central_task_db.py  create_planner_task.py  dispatcher_control.py  dispatcher_menu.py  extract_compaction_insights.py  install_codex_skill.sh  install_voice_ptt.sh  planner_ui.py  portfolio_report.py  repo_health.py  repo_health_check.py  review_doc.py  schedule_switch.py  session_manager.py  start-dispatcher.sh  sync_skill_from_codex.sh  task_quick.py  test_remote_worker.py  worker_agent.py  worker_analytics.py
tasks/: CENTRAL-OPS-01.md  CENTRAL-OPS-02.md  CENTRAL-OPS-03.md  CENTRAL-OPS-04.md  CENTRAL-OPS-08.md  CENTRAL-OPS-09.md  CENTRAL-OPS-10.md  CENTRAL-OPS-11.md  CENTRAL-OPS-12.md  CENTRAL-OPS-13.md  CENTRAL-OPS-14.md  CENTRAL-OPS-15.md  CENTRAL-OPS-16.md  CENTRAL-OPS-17.md  CENTRAL-OPS-18.md  CENTRAL-OPS-19.md  CENTRAL-OPS-20.md  CENTRAL-OPS-21.md  CENTRAL-OPS-22.md  CENTRAL-OPS-23.md  CENTRAL-OPS-24.md  CENTRAL-OPS-25.md  CENTRAL-OPS-26.md  CENTRAL-OPS-85.md  CENTRAL-OPS-87.md  TASK_TEMPLATE.md
tests/: test_central_audit_flow.sh  test_central_audit_reporting.sh  test_central_backfill_flow.sh  test_central_db_durability.sh  test_central_runtime_behavior.py  test_central_runtime_reconcile.py  test_central_runtime_v2_backends_behavior.py  test_central_runtime_v2_commands_behavior.py  test_central_runtime_v2_observation_behavior.py  test_central_runtime_worker_status.py  test_central_runtime_worker_status.sh  test_central_task_db_behavior.py  test_central_task_db_coverage_boost.py  test_central_task_db_extended_coverage.py  test_central_task_db_extended_coverage2.py  test_central_task_db_operator_runtime_paths.py  test_central_task_db_repo_lookup.py  test_central_task_id_reservations.sh  test_central_task_repo_registry.py  (+30 more)
(+121 files in other folders)
