[workspace]
members = [
    "crates/runtime",
    "crates/agentic_loop",
    "crates/context_manager",
    "crates/inference",
    "crates/persistence",
    "crates/tool_executor",
    "crates/web",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["Ecosystem Contributors"]
license = "Apache-2.0"

[workspace.dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
indexmap = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
rusqlite = { version = "0.31", features = ["bundled", "chrono", "serde_json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
