[project]
name = "central"
version = "0.0.0"
description = "CENTRAL operational tooling and runtime scripts"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
test = [
  "pytest>=8.2,<9",
  "pytest-cov>=5,<7",
]

[tool.pytest.ini_options]
testpaths = ["tests", "scripts/tests"]
pythonpath = ["scripts"]
addopts = "-ra"

[tool.coverage.run]
branch = true
source = ["scripts", "tools"]

[tool.coverage.xml]
output = "coverage.xml"
